# sam

./: .gitignore  .gitmodules  .sam_rc.toml  Cargo.toml  GITHUB_ACTIONS_MIGRATION.md  Makefile  README.md  onboarding.md  ssam.code-workspace  ssam_rc.toml
.cargo/: config
.circleci/: config.yml
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
.packaging/: bump_version.sh  package_all.sh
.packaging/homebrew/: homebrew.sh  sam.rb.j2  ssam.rb  ssam.rb.j2
.packaging/snap/: snap.sh  snapcraft.yaml.j2
.sam/circleci/: aliases.yaml  vars.yaml
.sam/project/: aliases.yml  vars.yml
agent-skills/.claude-plugin/: plugin.json
agent-skills/hooks/: block-sam-direct-access.py  hooks.json  test_block_sam_direct_access.py
agent-skills/sam-authoring/: SKILL.md
agent-skills/sam-usage/: SKILL.md
dev-strategy-sam-mcp/: code-context.md  context-document.md  decision-log.yaml  implementation-roadmap.md
dev-strategy-sam-mcp/contributions/001-phase-0-implementation-code-general-purpose/: changelog.md  context-handoff.md  decision-log.yaml
dev-strategy-sam-mcp/contributions/002-phase-1-implementation-steel-thread-general-purpose/: changelog.md  context-handoff.md  decision-log.yaml
dev-strategy-sam-mcp/contributions/003-phase-2-implementation-steel-thread-general-purpose/: changelog.md  context-handoff.md  decision-log.yaml
dev-strategy-sam-mcp/contributions/004-polish-release-implementation-general-purpose/: changelog.md  context-handoff.md  decision-log.yaml
dev-strategy-sam-mcp/contributions/005-polish-design-testing-design-contribute/: context-handoff.md  decision-log.md  design-doc.md
dev-strategy-sam-mcp/contributions/006-polish-testing-implementation-general-purpose/: changelog.md  context-handoff.md  decision-log.yaml
dev-strategy-sam-mcp/contributions/007-polish-design-logging-design-contribute/: context-handoff.md  decision-log.md  design-doc.md
dev-strategy-sam-mcp/contributions/008-polish-logging-implementation-general-purpose/: changelog.md  context-handoff.md  decision-log.yaml
docs/: index.md
examples/oneliners/: aliases.yaml  vars.yaml
examples/oneliners/docker/: aliases.yaml  vars.yaml
examples/oneliners/kubernetes/: aliases.yaml  vars.yaml
examples/oneliners/scripts/: fancy_ls.sh
sam-cache/: Cargo.toml
sam-cli/: Cargo.toml
sam-cli/src/: cache_engine.rs  cli.rs  config.rs  config_engine.rs  environment.rs  executors.rs  history_engine.rs  logger.rs  main.rs  preview_engine.rs  session_engine.rs
sam-config/: Cargo.toml
sam-config/src/: lib.rs
sam-core/: Cargo.toml
sam-core/src/: aliases.rs  aliases_repository.rs  commands.rs  dependencies.rs  identifiers.rs  lib.rs  processes.rs  vars.rs  vars_repository.rs
sam-core/src/algorithms/: dependency_resolution.rs  mod.rs  resolver.rs
sam-core/src/engines/: mocks.rs  mod.rs  sam_engine.rs
sam-core/src/entities/: aliases.rs  commands.rs  dependencies.rs  discover.rs  identifiers.rs  mod.rs  namespaces.rs  processes.rs  vars.rs
sam-core/src/repositories/: aliases_repository.rs  mod.rs  vars_repository.rs
sam-mcp/: Cargo.toml  README.md
sam-mcp/src/: loader.rs  main.rs  resolver.rs  server.rs
sam-persistence/: Cargo.toml
sam-persistence/src/: associative_state.rs  history_aliases.rs  lib.rs  sequential_state.rs  session_storage.rs  vars_cache.rs
sam-persistence/src/repositories/: aliases_repository.rs  mod.rs  vars_repository.rs
sam-readers/: Cargo.toml
sam-readers/src/: lib.rs  readers.rs
sam-terminals/: Cargo.toml
sam-terminals/src/: lib.rs  processes.rs  tmux.rs
sam-tui/: Cargo.toml
sam-tui/examples/: view.rs
sam-tui/src/: lib.rs  preview_skim.rs  ui_skim.rs  ui_v2.rs
sam-tui/src/modal_view/: mod.rs  run_log.err  theme.rs  ui.rs  ui_insert_mode.rs  ui_options_mode.rs  view.rs
sam-tui/src/modal_view/state/: list_state.rs  mod.rs  options_state.rs  view_state.rs
sam-ui-skim/: Cargo.toml
sam-utils/: Cargo.toml
sam-utils/src/: fsutils.rs  lib.rs
src/: lib.rs
src/core/: aliases.rs  aliases_repository.rs  choices.rs  commands.rs  dependencies.rs  identifiers.rs  mod.rs  namespaces.rs  scripts.rs  vars.rs  vars_repository.rs
src/io/: mod.rs  readers.rs
src/utils/: fsutils.rs  mod.rs  processes.rs
