[package]
name = "ssam"
version = "0.5.1"
authors = ["Ryad ZENINE <r.zenine@gmail.com>"]
edition = "2018"

[[bin]]
name = "ssam"
path = "src/bin/ssam/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0", features= ["derive"] }
clap = "2.33"
serde_yaml = "0.8"
config="0.10.1"
skim="0.9.1"
dirs="3.0.1"
crossbeam="0.8.0"
crossbeam-channel="0.5.0"
regex="1.4.1"
lazy_static="1.4.0"
maplit = "1.0.2"

[dev-dependencies]
rand="0.7.3"
tempdir = "0.3"