[package]
name = "sam"
version = "0.10.0"
authors = ["Ryad ZENINE <r.zenine@gmail.com>"]
description = "sam lets you difine custom aliases and search them using fuzzy search."
edition = "2018"
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/r-zenine/sam"

[[bin]]
name = "sam"
path = "src/bin/sam/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Metadata for the debian package.
[package.metadata.deb]
maintainer = "Ryad Zenine <r.zenine@gmail.com>"
copyright = "2020, Ryad Zenine <r.zenine@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
A simple subcommand for the Cargo package manager for \
building Debian packages from Rust projects."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/sam", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/sam/README", "644"],
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = "2.33"
serde_yaml = "0.8"
skim = "0.9.3"
dirs = "3.0.1"
crossbeam = "0.8.0"
crossbeam-channel = "0.5.0"
regex = "1.4.1"
lazy_static = "1.4.0"
maplit = "1.0.2"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
prettytable-rs = "0.8.0"
termion = "1.0.0"
thiserror = "1.0.22"
toml = "0.4.2"

[dev-dependencies]
rand = "0.7.3"
tempdir = "0.3"
