[package]
name = "sam"
version = "0.13.0"
authors = ["Ryad ZENINE <r.zenine@gmail.com>"]
description = "sam lets you difine custom aliases and search them using fuzzy search."
edition = "2018"
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/r-zenine/sam"

[workspace]
members = [
    "sam-cli", 
    "sam-cache", 
    "sam-readers", 
    "sam-ui-skim", 
    "sam-core", 
    "sam-utils"]

[[bin]]
name = "sam"
path = "src/bin/sam/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Metadata for the debian package.
[package.metadata.deb]
maintainer = "Ryad Zenine <r.zenine@gmail.com>"
copyright = "2020, Ryad Zenine <r.zenine@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
A simple subcommand for the Cargo package manager for \
building Debian packages from Rust projects."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/sam", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/sam/README", "644"],
]

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
clap = "2.33.3"
serde_yaml = "0.8.21"
skim = "0.9.4"
dirs = "4.0.0"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.1"
regex = "1.5.4"
lazy_static = "1.4.0"
maplit = "1.0.2"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
prettytable-rs = "0.8.0"
termion = "1.5.6"
thiserror = "1.0.30"
toml = "0.5.8"
rocksdb = "0.17.0"
bincode = "1.3.3"
rand = "0.8.4"
shellwords = "1.1.0"
comma = "1.0.0"
rustyline = "9.0.0"
sam-core = { path = "./sam-core" }
sam-utils = { path = "./sam-utils" }

[dev-dependencies]
tempdir = "0.3.7"
