[package]
name = "sam-cli"
version = "1.2.2"
edition = "2021"
# Example of customizing binaries in Cargo.toml.

[[bin]]
name = "sam"
path = "src/main.rs"

[dependencies]
sam-core = {path="../sam-core"}
sam-utils = {path="../sam-utils"}
sam-tui = {path="../sam-tui"}
sam-readers = {path="../sam-readers"}
sam-persistence = {path="../sam-persistence"}
sam-terminals = {path="../sam-terminals"}
clap = "2.34.0"
thiserror = "2.0.12"
termion = "4.0.5"
toml = "0.8.23"
serde = { version = "1.0.136", features = ["derive"] }
dirs = "6.0.0"
tmux_interface = "0.3.2"
log = "0.4.16"
flexi_logger = "0.31.2"

[dev-dependencies]
maplit = "1.0.2"
