[package]
name = "sam-core"
version = "0.17.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.5.5"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
maplit = "1.0.2"
comma = "1.0.0"
termion = "1.5.6"
shellwords = "1.1.0"

[dev-dependencies]
serde_yaml = "0.8.23"
