[package]
name = "sam-core"
version = "1.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.5.5"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "2.0.12"
comma = "1.0.0"

[dev-dependencies]
serde_yaml = "0.8.23"
maplit = "1.0.2"
