[package]
name = "sam-persistence"
version = "0.13.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sam-utils = {path="../sam-utils"}
sam-core = {path="../sam-core"}
rocksdb = "0.17.0"
thiserror = "1.0.30"
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
serde_yaml = "0.8.21"

[dev-dependencies]
