[package]
name = "sam-readers"
version = "0.17.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sam-core = { path="../sam-core" }
thiserror = "1.0.30"
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8.21"
