[package]
name = "sam-readers"
version = "1.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sam-core = { path="../sam-core" }
sam-persistence = { path="../sam-persistence" }
thiserror = "1.0.30"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
