[package]
name = "sam-terminals"
version = "1.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sam-core = {path="../sam-core"}
tmux_interface = { version = "0.3.2", features = ["tmux_2_9a"]}
thiserror = "2.0.12"
log = "0.4.16"
shellwords = "1.1.0"
lazy_static = "1.4.0"
regex = "1.5.5"

[dev-dependencies]
maplit = "1.0.2"
