[package]
name = "sam-tui"
version = "0.13.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sam-core = {path="../sam-core"}
sam-persistence = {path="../sam-persistence"}
sam-utils = {path="../sam-utils"}
sam-readers = {path="../sam-readers"}
skim = "0.9.4"
thiserror = "1.0.30"
termion = "1.5.6"
