[package]
name = "sam-tui"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sam-core = {path="../sam-core"}
sam-persistence = {path="../sam-persistence"}
sam-utils = {path="../sam-utils"}
sam-readers = {path="../sam-readers"}
thiserror = "1.0.30"
tui = { version = "0.17", default-features = false, features = ["termion"] }
fzy-rs = "0.1.0"
termion = "1.5.6"
