[package]
name = "sam-tui"
version = "1.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sam-core = {path="../sam-core"}
sam-persistence = {path="../sam-persistence"}
sam-utils = {path="../sam-utils"}
sam-readers = {path="../sam-readers"}
sam-terminals = {path="../sam-terminals"}
thiserror = "2.0.12"
tui = { version = "0.19.0", default-features = false, features = ["termion"] }
fzy-rs = "0.1.0"
termion = "4.0.5"
